# payments

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.py  conftest.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  20260414_0001_init.py
api/: deps.py  schemas.py
api/routes/: __init__.py  orders.py  payments.py
app/: main.py  worker.py
app/api/: payments.py
app/core/: config.py  security.py
app/db/: __init__.py  models.py  session.py
app/messaging/: broker.py  consumer.py
app/schemas/: payment.py
app/services/: exceptions.py  metrics.py  outbox_relay.py  payment_service.py  webhook.py
db/: __init__.py  models.py  session.py
db/repositories/: __init__.py  order_repository.py  payment_repository.py
docs/: SCHEMA.md
integrations/: __init__.py  bank_client.py
payments/: __init__.py  models.py  money.py  service.py
rabbitmq/: definitions.json
services/: payment_service.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_consumer_processing.py  test_payment_service.py  test_payments.py  test_service.py  test_webhook_retry.py
