[tool.poetry]
name = "payment-service-test-case"
version = "0.1.0"
description = "Payment service with bank integration for order payments"
authors = ["andrei <andrei@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.109.0"
uvicorn = {version = ">=0.27.0", extras = ["standard"]}
sqlalchemy = ">=2.0.0"
alembic = ">=1.13.0"
psycopg2-binary = ">=2.9.9"
httpx = ">=0.26.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
